fix: header z-index

--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -9,7 +9,7 @@
 
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 99;
 }
 
 
